force-app/main/default/objects/Activity/fields/Family_Stakeholder_Buy_In__c.field-meta.xml
<CustomField>
    <fullName>Family_Stakeholder_Buy_In__c</fullName>
    <label>Type of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family/Stakeholders Visited</fullName>
                <label>Family/Friends/Stakeholders Visited</label>
            </value>
            <value>
                <fullName>Individual Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>