force-app/main/default/objects/Activity/fields/Financial_Institute__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institute__c</fullName>
    <label>Del_Visiting At</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Venue Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>