force-app/main/default/objects/Activity/fields/Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Status__c</fullName>
    <label>Del Follow Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deciding - Need More Time</fullName>
            </value>
            <value>
                <fullName>Discussing with Family</fullName>
            </value>
            <value>
                <fullName>Arranging Funds</fullName>
            </value>
            <value>
                <fullName>Looking for Other Options</fullName>
            </value>
            <value>
                <fullName>Awaiting Loan Eligibility/Approval</fullName>
            </value>
            <value>
                <fullName>Price Deviation Required</fullName>
            </value>
            <value>
                <fullName>Payment Schedule Deviation Required</fullName>
            </value>
            <value>
                <fullName>Follow Up Not Applicable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Deciding- Interested- list of documents Shared</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Document Collating</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Non-Contactable</fullName>
            </value>
            <value>
                <fullName>Customer not Responding</fullName>
            </value>
            <value>
                <fullName>Self-Funding</fullName>
            </value>
            <value>
                <fullName>Moved to other bank</fullName>
            </value>
            <value>
                <fullName>Logged in sanction in process</fullName>
            </value>
            <value>
                <fullName>Sanctioned</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>cibil-eligibility issue</fullName>
            </value>
            <value>
                <fullName>Sales Dispute</fullName>
            </value>
            <value>
                <fullName>Booking not confirmed</fullName>
            </value>
            <value>
                <fullName>Under cancellation</fullName>
            </value>
            <value>
                <fullName>First disbursement in process</fullName>
            </value>
            <value>
                <fullName>Pendency from Customer</fullName>
            </value>
            <value>
                <fullName>pendency from Runwal</fullName>
            </value>
            <value>
                <fullName>Call Customer</fullName>
            </value>
            <value>
                <fullName>Call Banker</fullName>
            </value>
            <value>
                <fullName>Provide Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>