force-app/main/default/objects/Activity/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <label>Del FullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>