force-app/main/default/objects/Activity/fields/Inventory_Preference__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Preference__c</fullName>
    <label>Inventory Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>