force-app/main/default/objects/Activity/fields/Is_Created_through_Anarock__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_through_Anarock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Del_Is Created through Anarock</label>
    <type>Checkbox</type>
</CustomField>