force-app/main/default/objects/Activity/fields/Loan_Pre_Approval__c.field-meta.xml
<CustomField>
    <fullName>Loan_Pre_Approval__c</fullName>
    <label>Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-approved loan/Sanction Letter</fullName>
            </value>
            <value>
                <fullName>No Intention/Self-funding</fullName>
            </value>
            <value>
                <fullName>Eligibility For Loan</fullName>
            </value>
            <value>
                <fullName>Sell of Property</fullName>
            </value>
            <value>
                <fullName>Loan Eligibility Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>