force-app/main/default/objects/Activity/fields/Mobile_Number_Webform__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_Webform__c</fullName>
    <label>Mobile Number Webform</label>
    <type>Phone</type>
</CustomField>