force-app/main/default/objects/Activity/fields/Name_Of_Banks__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Banks__c</fullName>
    <label>Del Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OBM</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Venue Meeting</fullName>
            </value>
            <value>
                <fullName>Home Presentation</fullName>
            </value>
            <value>
                <fullName>Office Presentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>