force-app/main/default/objects/Activity/fields/New_Channel_Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Channel_Partner_Email__c</fullName>
    <label>Del New Channel Partner Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>