force-app/main/default/objects/Activity/fields/New_Channel_Partner_Phone__c.field-meta.xml
<CustomField>
    <fullName>New_Channel_Partner_Phone__c</fullName>
    <label>Del_Deal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>