force-app/main/default/objects/Activity/fields/New_Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Del New Lead Created</label>
    <type>Checkbox</type>
</CustomField>