force-app/main/default/objects/Activity/fields/Non_Collectible_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Non_Collectible_Reasons__c</fullName>
    <label>Non-Collectible Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Collection_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Disbursement Pending</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Legal notice from Runwal initiated</fullName>
            </value>
            <value>
                <fullName>Fund Transfer</fullName>
            </value>
            <value>
                <fullName>Transfer / Upgrade</fullName>
            </value>
            <value>
                <fullName>No Dues</fullName>
            </value>
            <value>
                <fullName>Legal notice from customer</fullName>
            </value>
            <value>
                <fullName>RERA Complaint</fullName>
            </value>
            <value>
                <fullName>Sarfaesi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>