force-app/main/default/objects/Activity/fields/Own_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Own_Contribution__c</fullName>
    <label>Del Own Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;5%</fullName>
            </value>
            <value>
                <fullName>&lt;10%</fullName>
            </value>
            <value>
                <fullName>&lt;15%</fullName>
            </value>
            <value>
                <fullName>&lt;20%</fullName>
            </value>
            <value>
                <fullName>&lt;30%</fullName>
            </value>
            <value>
                <fullName>30-50%</fullName>
            </value>
            <value>
                <fullName>50-75%</fullName>
            </value>
            <value>
                <fullName>75-100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>