force-app/main/default/objects/Activity/fields/Pre_Sales_user__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_user__c</fullName>
    <label>Del_Pre Sales user</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abdullah Shaikh</fullName>
            </value>
            <value>
                <fullName>Abhishek Sonawane</fullName>
            </value>
            <value>
                <fullName>Ahmad Patel</fullName>
            </value>
            <value>
                <fullName>Akanksha Mukhiya</fullName>
            </value>
            <value>
                <fullName>Akash Kedare</fullName>
            </value>
            <value>
                <fullName>Akshay Jaiswal</fullName>
            </value>
            <value>
                <fullName>Alisha Shaikh CBSL</fullName>
            </value>
            <value>
                <fullName>Altamash Hawaldar</fullName>
            </value>
            <value>
                <fullName>Amaan Shaikh</fullName>
            </value>
            <value>
                <fullName>Aman Shah</fullName>
            </value>
            <value>
                <fullName>Amir khan</fullName>
            </value>
            <value>
                <fullName>Amit Kamble</fullName>
            </value>
            <value>
                <fullName>Anhar Shaikh  CBSL</fullName>
            </value>
            <value>
                <fullName>Aniket Bhagwat</fullName>
            </value>
            <value>
                <fullName>Aniket Naik</fullName>
            </value>
            <value>
                <fullName>Anjali chiplunkar</fullName>
            </value>
            <value>
                <fullName>Ankita Umbre</fullName>
            </value>
            <value>
                <fullName>Armaan Sayyed</fullName>
            </value>
            <value>
                <fullName>Arvind Choudhary</fullName>
            </value>
            <value>
                <fullName>Asmita Jadhav</fullName>
            </value>
            <value>
                <fullName>Avtar Kaur</fullName>
            </value>
            <value>
                <fullName>Avtarkaur lal</fullName>
            </value>
            <value>
                <fullName>Bhageshwari Dhanwani</fullName>
            </value>
            <value>
                <fullName>Bhavesh Rathod  CBSL</fullName>
            </value>
            <value>
                <fullName>C Akash Kedare</fullName>
            </value>
            <value>
                <fullName>CBSL</fullName>
            </value>
            <value>
                <fullName>CC01</fullName>
            </value>
            <value>
                <fullName>CC02</fullName>
            </value>
            <value>
                <fullName>CC03</fullName>
            </value>
            <value>
                <fullName>CC04</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>