force-app/main/default/objects/Activity/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del Prospect</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>$Source.WhoId</field>
            <operation>equals</operation>
            <valueField>Prospect__c.Lead__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.WhoId</field>
            <operation>equals</operation>
            <valueField>Prospect__c.Account__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.WhatId</field>
            <operation>equals</operation>
            <valueField>Prospect__c.Opportunity__r.Id</valueField>
        </filterItems>
        <infoMessage>Prospect Related lookup filter error !!</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipLabel>Prospect Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>