force-app/main/default/objects/Activity/fields/PTP_Amount__c.field-meta.xml
<CustomField>
    <fullName>PTP_Amount__c</fullName>
    <label>PTP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>