force-app/main/default/objects/Activity/fields/Reason_for_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Inbound__c</fullName>
    <label>Del Reason for Inbound Communication</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Communication_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Directional query</fullName>
            </value>
            <value>
                <fullName>Email Blast</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>Missed / Abandon call</fullName>
            </value>
            <value>
                <fullName>Project information</fullName>
            </value>
            <value>
                <fullName>SMS blast</fullName>
            </value>
            <value>
                <fullName>Invalid Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>