force-app/main/default/objects/Activity/fields/Reason_For_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Lost__c</fullName>
    <label>Del Reason For Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Rating__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Budget / Price / Possession</fullName>
            </value>
            <value>
                <fullName>Committee Disapproved</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Expecting correction in the market</fullName>
            </value>
            <value>
                <fullName>Invalid Enquiry</fullName>
            </value>
            <value>
                <fullName>Inventory Choice Availability</fullName>
            </value>
            <value>
                <fullName>Not interested in real estate</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Payment Schedule</fullName>
            </value>
            <value>
                <fullName>Product Specification</fullName>
            </value>
            <value>
                <fullName>Site Experience</fullName>
            </value>
            <value>
                <fullName>Vaastu issues</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Client was a competition</fullName>
            </value>
            <value>
                <fullName>Conditional Sale of Property</fullName>
            </value>
            <value>
                <fullName>Disliked Sales Experience</fullName>
            </value>
            <value>
                <fullName>Family Issues</fullName>
            </value>
            <value>
                <fullName>Feels rates are high</fullName>
            </value>
            <value>
                <fullName>Issues with External Amenities</fullName>
            </value>
            <value>
                <fullName>Issues with Internal fixtures/fittings</fullName>
            </value>
            <value>
                <fullName>Issues with Sample flat/sample models</fullName>
            </value>
            <value>
                <fullName>Layout issues</fullName>
            </value>
            <value>
                <fullName>Loan issues</fullName>
            </value>
            <value>
                <fullName>Looking to negotiate/offer</fullName>
            </value>
            <value>
                <fullName>Lost to Competition</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Not as per Vaastu</fullName>
            </value>
            <value>
                <fullName>Not in configuration</fullName>
            </value>
            <value>
                <fullName>Not in possession timelines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>