force-app/main/default/objects/Activity/fields/Reason_for_Lost_Junk__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Lost_Junk__c</fullName>
    <label>Reason for Lost/Junk</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Disposition_Custom__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>DND</fullName>
            </value>
            <value>
                <fullName>Feels Rates Are High</fullName>
            </value>
            <value>
                <fullName>Looking For Negotiations/Offer</fullName>
            </value>
            <value>
                <fullName>Lost to Competition</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Not As Per Vastu</fullName>
            </value>
            <value>
                <fullName>Not Contactable</fullName>
            </value>
            <value>
                <fullName>Not In Configutation</fullName>
            </value>
            <value>
                <fullName>Not In Possession Time Line</fullName>
            </value>
            <value>
                <fullName>Not In Preferred Location</fullName>
            </value>
            <value>
                <fullName>Not Looking For Any Property</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Unavailability Of Required Apartment</fullName>
            </value>
            <value>
                <fullName>BPCL not done</fullName>
            </value>
            <value>
                <fullName>Not responding</fullName>
            </value>
            <value>
                <fullName>ringing after 5 attempts</fullName>
            </value>
            <value>
                <fullName>call back</fullName>
            </value>
            <value>
                <fullName>follow up</fullName>
            </value>
            <value>
                <fullName>Details shared but no response</fullName>
            </value>
            <value>
                <fullName>will take more then 3 month</fullName>
            </value>
            <value>
                <fullName>Not enquired</fullName>
            </value>
            <value>
                <fullName>Wrong no</fullName>
            </value>
            <value>
                <fullName>Invalid no</fullName>
            </value>
            <value>
                <fullName>Language barrier</fullName>
            </value>
            <value>
                <fullName>asked to call back</fullName>
            </value>
            <value>
                <fullName>Continuous 15 Not Connected Calls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>