force-app/main/default/objects/Activity/fields/Reason_for_not_booking__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_booking__c</fullName>
    <label>Del Reason for not booking</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Booked__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Conditional Sale of Property</fullName>
            </value>
            <value>
                <fullName>Considering Competition</fullName>
            </value>
            <value>
                <fullName>Decision maker unavailable</fullName>
            </value>
            <value>
                <fullName>Desired configuration unavailable</fullName>
            </value>
            <value>
                <fullName>Family issues</fullName>
            </value>
            <value>
                <fullName>Feels prices are high</fullName>
            </value>
            <value>
                <fullName>Layout issues</fullName>
            </value>
            <value>
                <fullName>Loan eligibility issues</fullName>
            </value>
            <value>
                <fullName>Location issues</fullName>
            </value>
            <value>
                <fullName>Looking to negotiate</fullName>
            </value>
            <value>
                <fullName>Needs more time to arrange finances</fullName>
            </value>
            <value>
                <fullName>Needs time to discuss with family</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Product issues</fullName>
            </value>
            <value>
                <fullName>Vaastu issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>