force-app/main/default/objects/Activity/fields/Reason_for_Not_Interested__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Not_Interested__c</fullName>
    <label>Del Reason for Not Interested</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CP_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Brokerage issues</fullName>
            </value>
            <value>
                <fullName>Not Working in our Project Location</fullName>
            </value>
            <value>
                <fullName>Works only in rentals/ commercial</fullName>
            </value>
            <value>
                <fullName>Required Configuration unavailable</fullName>
            </value>
            <value>
                <fullName>Low Client budget range</fullName>
            </value>
            <value>
                <fullName>Brokerage timeline issues</fullName>
            </value>
            <value>
                <fullName>No Offers/ incentives for Channel Partner</fullName>
            </value>
            <value>
                <fullName>No Offers/ incentives for Clients</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>