force-app/main/default/objects/Activity/fields/Reason_for_Outbound_Communication__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Outbound_Communication__c</fullName>
    <label>Del Reason for Outbound Communication</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Communication_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cross project</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Open calling</fullName>
            </value>
            <value>
                <fullName>Visit reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>