force-app/main/default/objects/Activity/fields/Registraion_Status__c.field-meta.xml
<CustomField>
    <fullName>Registraion_Status__c</fullName>
    <label>Del_Source Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>