force-app/main/default/objects/Activity/fields/RW_Call_Completion__c.field-meta.xml
<CustomField>
    <fullName>RW_Call_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Del Call Completion</label>
    <type>Checkbox</type>
</CustomField>