force-app/main/default/objects/Activity/fields/RW_Call_Timing__c.field-meta.xml
<CustomField>
    <fullName>RW_Call_Timing__c</fullName>
    <label>Visit Timing</label>
    <type>DateTime</type>
</CustomField>