force-app/main/default/objects/Activity/fields/RW_Contacted__c.field-meta.xml
<CustomField>
    <fullName>RW_Contacted__c</fullName>
    <formula>CASE(Call_Status__c,
&quot;Ringing&quot;,&quot;No&quot;,
&quot;Interested&quot;,&quot;Yes&quot;,
&quot;Follow Up&quot;,&quot;Yes&quot;,
&quot;Not Interested&quot;,&quot;Yes&quot;,
&quot;Not Contactable&quot;,&quot;No&quot;,
&quot;Yet to be Called&quot;,&quot;No&quot;,
&quot;Visit Proposed&quot;,&quot;Yes&quot;,
&quot;Visit Confirmed&quot;,&quot;Yes&quot;,
&quot;Visit Done&quot;,&quot;Yes&quot;,
&quot;Proposal Given&quot;,&quot;Yes&quot;,
&quot;Booked&quot;,&quot;Yes&quot;,
&quot;Call back later&quot;,&quot;Yes&quot;,
&quot;Spoke to the 3rd party&quot;,&quot;No&quot;,
&quot;Meeting Fixed&quot;,&quot;Yes&quot;,
&quot;Meeting Proposed&quot;,&quot;Yes&quot;,
&quot;Meeting Done&quot;,&quot;Yes&quot;,
&quot;Reference Given&quot;,&quot;Yes&quot;,
&quot;Customer Disconnected(DNC)&quot;,&quot;No&quot;,
&quot;Wrong Number&quot;,&quot;No&quot;,
&quot;Out of Coverage Area&quot;,&quot;No&quot;,&quot;&quot;
)</formula>
    <label>Contacted</label>
    <type>Text</type>
</CustomField>